exclude nodejs directory

--- a/src/main/resources/coding-format.gradle
+++ b/src/main/resources/coding-format.gradle
@@ -32,6 +32,7 @@ spotless {
             include '**/*.md'
             include '**/*.sh'
             exclude 'gradle/ext'
+            exclude 'build/nodejs'
             exclude '**/node_modules/'
         }
         indentWithSpaces()
